--- a/frontend/client/css/style.css
+++ b/frontend/client/css/style.css
@@ -29,73 +29,6 @@ a {
     text-decoration: none; }
   a.more {
     font-weight: 600; }
-
-/*.custom-navbar {*/
-/*  background: #3b5d50 !important;*/
-/*  padding-top: 20px;*/
-/*  padding-bottom: 20px; }*/
-/*  .custom-navbar .navbar-brand {*/
-/*    font-size: 32px;*/
-/*    font-weight: 600; }*/
-/*    .custom-navbar .navbar-brand > span {*/
-/*      opacity: .4; }*/
-/*  .custom-navbar .navbar-toggler {*/
-/*    border-color: transparent; }*/
-/*    .custom-navbar .navbar-toggler:active, .custom-navbar .navbar-toggler:focus {*/
-/*      -webkit-box-shadow: none;*/
-/*      box-shadow: none;*/
-/*      outline: none; }*/
-/*  @media (min-width: 992px) {*/
-/*    .custom-navbar .custom-navbar-nav li {*/
-/*      margin-left: 15px;*/
-/*      margin-right: 15px; } }*/
-/*  .custom-navbar .custom-navbar-nav li a {*/
-/*    font-weight: 500;*/
-/*    color: #ffffff !important;*/
-/*    !*opacity: .5;*!*/
-/*    -webkit-transition: .3s all ease;*/
-/*    -o-transition: .3s all ease;*/
-/*    transition: .3s all ease;*/
-/*    position: relative; }*/
-/*    @media (min-width: 768px) {*/
-/*      .custom-navbar .custom-navbar-nav li a:before {*/
-/*        content: "";*/
-/*        position: absolute;*/
-/*        bottom: 0;*/
-/*        left: 8px;*/
-/*        right: 8px;*/
-/*        background: #f9bf29;*/
-/*        height: 5px;*/
-/*        opacity: 1;*/
-/*        visibility: visible;*/
-/*        width: 0;*/
-/*        -webkit-transition: .15s all ease-out;*/
-/*        -o-transition: .15s all ease-out;*/
-/*        transition: .15s all ease-out; } }*/
-/*    .custom-navbar .custom-navbar-nav li a:hover {*/
-/*      opacity: 1; }*/
-/*      .custom-navbar .custom-navbar-nav li a:hover:before {*/
-/*        width: calc(100% - 16px); }*/
-
-/*  .custom-navbar .custom-navbar-nav li.active a {*/
-/*    opacity: 1; }*/
-/*    .custom-navbar .custom-navbar-nav li.active a:before {*/
-/*      width: calc(100% - 16px); }*/
-/*  .custom-navbar .custom-navbar-cta {*/
-/*    margin-left: 0 !important;*/
-/*    -webkit-box-orient: horizontal;*/
-/*    -webkit-box-direction: normal;*/
-/*    -ms-flex-direction: row;*/
-/*    flex-direction: row; }*/
-/*    @media (min-width: 768px) {*/
-/*      .custom-navbar .custom-navbar-cta {*/
-/*        margin-left: 40px !important; } }*/
-/*    .custom-navbar .custom-navbar-cta li {*/
-/*      margin-left: 0px;*/
-/*      margin-right: 0px; }*/
-/*      .custom-navbar .custom-navbar-cta li:first-child {*/
-/*        margin-right: 20px; }*/
-
 .custom-navbar {
   background: #3b5d50 !important;
   padding-top: 20px;
@@ -190,25 +123,6 @@ a {
 .custom-navbar .custom-navbar-cta li:first-child {
   margin-right: 20px;
 }
-
-
-/* Position nested dropdown menus */
-/*.dropdown-submenu {*/
-/*  position: relative;*/
-/*}*/
-
-/*.dropdown-submenu .dropdown-menu {*/
-/*  top: 0;*/
-/*  left: 100%; !* Align submenu to the right of the parent menu *!*/
-/*  margin-top: -6px;*/
-/*  border-radius: 0.25rem;*/
-/*  display: none; !* Initially hidden *!*/
-/*}*/
-
-/*.dropdown-submenu:hover .dropdown-menu {*/
-/*  display: block; !* Show submenu on hover *!*/
-/*}*/
-
 .dropdown-submenu {
   position: relative;
 }
@@ -247,20 +161,15 @@ a {
   border-radius: 10px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
-.product-item img {
-  width: 100%; /* Ensures the image fills the width of the container */
-  height: 200px; /* Fixed height for consistent size */
-  object-fit: cover; /* Ensures the image is cropped proportionally without stretching */
-  border-radius: 8px; /* Keeps the rounded corners */
-}
 
-.product-item h5 {
-  font-size: 1.1rem;
-  font-weight: 500;
-  color: #333;
-  margin-top: 15px;
-  text-align: center;
-}
+
+/*.product-item h5 {*/
+/*  font-size: 1.1rem;*/
+/*  font-weight: 500;*/
+/*  color: #333;*/
+/*  margin-top: 15px;*/
+/*  text-align: center;*/
+/*}*/
 
 
 .hero {
@@ -416,7 +325,14 @@ a {
     display: block;
     position: relative;
     padding-bottom: 50px;
-    cursor: pointer; }
+    cursor: pointer;
+  }
+/*.product-item img {*/
+/*  width: 100%; !* Ensures the image fills the width of the container *!*/
+/*  height: 400px; !* Fixed height for consistent size *!*/
+/*  object-fit: cover; !* Ensures the image is cropped proportionally without stretching *!*/
+/*  border-radius: 8px; !* Keeps the rounded corners *!*/
+/*}*/
     .product-section .product-item .product-thumbnail {
       margin-bottom: 30px;
       position: relative;
